Cors atualizaçao